--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ p:nth-of-type(3n) {
   max-width: 600px;
 }
 
+p:last-of-type {
+  padding-left: 25vw;
+  margin-bottom: 3vw;
+  text-align: center;
+  font-size: 20px;
+  color: maroon;
+}
 
 h1 ~ h2 {
   color: maroon;
@@ -99,5 +106,9 @@ h3:first-of-type {
 }
 
 h1 ~ h3 {
-  border: 2px solid maroon;
+  border: 2px solid darkolivegreen;
 } 
+
+.chapter:first-child {
+  color: chartreuse;
+}
